--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 # VITE_API_URL=http://localhost:8000
 # VITE_API_URL=https://cafe-backend-pearl.vercel.app
+
+      const url = `http://localhost:8000/api/users/showusers/?page=${page}&limit=${limit}&search=${searchVal}`;
+        const url = `http://localhost:8000/api/users/${id}`;
